# medical-ai-search

./: .gitignore  LICENSE  README.md  techspec.md
backend/: README.md  docker-compose.dev.yml
backend/diagrams/: service_arch_diag.mmd
backend/docs/: README.md  core_backend_services_setup.md  deployment-checklist.md  phase2-implementation-guide.md  service-specifications.md
backend/infrastructure/postgres/: init-multiple-databases.sh
backend/scripts/: setup-dev.sh
backend/services/auth/: Dockerfile  README.md  env.example  pyproject.toml  requirements.txt
backend/services/auth/app/: main.py
backend/services/auth/app/api/: dependencies.py
backend/services/auth/app/api/v1/: auth.py  router.py  users.py
backend/services/auth/app/core/: config.py  database.py  logging.py  redis.py  security.py
backend/services/auth/app/db/: models.py
backend/services/auth/app/events/: publisher.py
backend/services/auth/app/schemas/: user.py
backend/services/auth/tests/: test_auth.py
backend/services/content-processing/: Dockerfile  README.md  env.example  requirements.txt
backend/services/document-management/: Dockerfile  README.md  env.example  requirements.txt
backend/services/search-api/: Dockerfile  README.md  env.example  requirements.txt
backend/services/search-indexing/: Dockerfile  README.md  env.example  requirements.txt
backend/shared/events/: __init__.py  base.py  kafka_client.py  user_events.py
terraform/: README.md  env.example  requirements.txt  setup.sh
terraform/diagrams/: infra_arch_diag.mmd
terraform/docs/: INFRASTRUCTURE_GUIDE.md  INFRA_DIAGRAM_GUIDE.md  infrastructure_setup_details.md  local_deployment.txt
terraform/environments/dev/: main.tf  outputs.tf  variables.tf
terraform/modules/eks/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/scripts/: setup.sh
terraform/shared/: backend.tf  variables.tf
(+48 files in other folders)
